unpackaged/main/default/objects/litify_pm__Bank_Account__c/litify_pm__Bank_Account__c.object-meta.xml
<CustomObject>
    <label>Bank Account</label>
    <nameField>
        <displayFormat>BA-{000000}</displayFormat>
        <label>Bank Account ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>