unpackaged/main/default/objects/litify_pm__Bank_Account__c/fields/litify_pm__Account_Holder__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Account_Holder__c</fullName>
    <label>Account Holder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>