unpackaged/main/default/objects/litify_pm__Bank_Account__c/fields/litify_pm__Account_Name__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Account_Name__c</fullName>
    <label>Account Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>