unpackaged/main/default/objects/litify_pm__Bank_Account__c/fields/litify_pm__Default_Account__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Default_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Once the bank account is created, you can use transactions to make further changes to your balance.</inlineHelpText>
    <label>Default Account</label>
    <type>Checkbox</type>
</CustomField>