unpackaged/main/default/objects/litify_pm__Bank_Account__c/fields/litify_pm__Domicile_Branch__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Domicile_Branch__c</fullName>
    <label>Domicile Branch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>