unpackaged/main/default/objects/litify_pm__Bank_Account__c/fields/litify_pm__Institution__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Institution__c</fullName>
    <label>Institution</label>
    <length>255</length>
    <type>Text</type>
</CustomField>