unpackaged/main/default/objects/litify_pm__Bank_Account__c/fields/litify_pm__Opening_Balance__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Opening_Balance__c</fullName>
    <label>Opening Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>