unpackaged/main/default/objects/litify_pm__Bank_Account__c/fields/litify_pm__Swift__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Swift__c</fullName>
    <inlineHelpText>This is a code for facilitating wire transfers via Society for Worldwide Interbank Financial Telecommunication.</inlineHelpText>
    <label>Swift</label>
    <length>255</length>
    <type>Text</type>
</CustomField>