unpackaged/main/default/objects/litify_pm__Bank_Account__c/fields/litify_pm__Transit_Number__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Transit_Number__c</fullName>
    <label>Transit Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>