unpackaged/main/default/objects/litify_pm__Bank_Account__c/fields/litify_pm__Type__c.field-meta.xml
<CustomField>
    <fullName>litify_pm__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Operating Account</fullName>
                <default>true</default>
                <label>Operating Account</label>
            </value>
            <value>
                <fullName>Trust Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>